# cpp2a_partitionsample

./: .bash_init  CMakeLists.txt  README.md
src/: bread.cc  butter.cc  jam.cc  spreadables.cc
